<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/curved_background_spinner"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginHorizontal="@dimen/_10sdp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_height="wrap_content">


        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:text="Map Type"

            android:textColor="@color/permissionSubTextColor"
            android:id="@+id/mapTypeText"
            android:fontFamily="@font/inter_bold"
            android:textSize="@dimen/_22ssp"
            app:layout_constraintBottom_toTopOf="@+id/mapTypeSubText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>




        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/mapTypeText"
            android:text="Select the map type given below"
            android:textColor="@color/darkGray"
            android:id="@+id/mapTypeSubText"

            android:fontFamily="@font/inter_reg"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>
        
        
        
        
        <com.google.android.material.card.MaterialCardView
            android:layout_width="@dimen/_140sdp"
            app:cardCornerRadius="@dimen/_12sdp"
            app:strokeWidth="@dimen/_1sdp"
            app:strokeColor="#DEDEDE"
            android:id="@+id/MaterialCardOne"
            app:layout_constraintEnd_toStartOf="@+id/MaterialCardTwo"
            android:layout_marginTop="@dimen/_10sdp"
            app:layout_constraintHorizontal_chainStyle="packed"
            android:layout_marginEnd="@dimen/_5sdp"
            app:layout_constraintTop_toBottomOf="@+id/mapTypeSubText"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/ic_map_1"
                    android:layout_width="@dimen/_40sdp"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_margin="@dimen/_10sdp"
                    android:src="@drawable/ic_map_1"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/textViewMapOne"
                    android:layout_width="@dimen/_70sdp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_10sdp"
                    android:fontFamily="@font/inter_semi_bold"
                    android:text="@string/normal_map"
                    android:textColor="@color/permissionSubTextColor"
                    android:textSize="@dimen/_12ssp"
                    app:layout_constraintBottom_toBottomOf="@+id/ic_map_1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/ic_map_1"
                    app:layout_constraintTop_toTopOf="@+id/ic_map_1" />
            </androidx.constraintlayout.widget.ConstraintLayout>
            
            
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="@dimen/_140sdp"
            app:cardCornerRadius="@dimen/_12sdp"
            app:strokeWidth="@dimen/_1sdp"
            app:strokeColor="#DEDEDE"
            android:layout_marginStart="@dimen/_5sdp"
            android:id="@+id/MaterialCardTwo"
            android:layout_marginTop="@dimen/_10sdp"
            app:layout_constraintStart_toEndOf="@+id/MaterialCardOne"
            app:layout_constraintTop_toBottomOf="@+id/mapTypeSubText"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="@+id/MaterialCardOne">


                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/ic_map_2"
                    android:layout_width="@dimen/_40sdp"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_margin="@dimen/_10sdp"
                    android:src="@drawable/ic_map_1"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/textViewMapTw0"
                    android:minWidth="@dimen/_70sdp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_10sdp"
                    android:fontFamily="@font/inter_semi_bold"
                    android:text="@string/SatelliteMap"
                    android:textColor="@color/permissionSubTextColor"
                    android:textSize="@dimen/_12ssp"
                    app:layout_constraintBottom_toBottomOf="@+id/ic_map_2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/ic_map_2"
                    app:layout_constraintTop_toTopOf="@+id/ic_map_2" />
            </androidx.constraintlayout.widget.ConstraintLayout>


        </com.google.android.material.card.MaterialCardView>


    <com.google.android.material.card.MaterialCardView
        android:layout_width="@dimen/_140sdp"
        app:cardCornerRadius="@dimen/_12sdp"
        app:strokeWidth="@dimen/_1sdp"
        app:strokeColor="#DEDEDE"
        android:id="@+id/MaterialCardThree"
         app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="@dimen/_10sdp"
        app:layout_constraintEnd_toStartOf="@+id/MaterialCardFour"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintTop_toBottomOf="@+id/MaterialCardOne"
        android:layout_height="wrap_content">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ic_map_3"
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                android:layout_margin="@dimen/_10sdp"
                android:src="@drawable/ic_map_1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textViewMapThree"
                android:layout_width="wrap_content"
                android:minWidth="@dimen/_70sdp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:fontFamily="@font/inter_semi_bold"
                android:text="@string/Terrainmap"
                android:textColor="@color/permissionSubTextColor"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintBottom_toBottomOf="@+id/ic_map_3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/ic_map_3"
                app:layout_constraintTop_toTopOf="@+id/ic_map_3" />
        </androidx.constraintlayout.widget.ConstraintLayout>




    </com.google.android.material.card.MaterialCardView>


        <com.google.android.material.card.MaterialCardView
            android:layout_width="@dimen/_140sdp"
            app:cardCornerRadius="@dimen/_12sdp"
            app:strokeWidth="@dimen/_1sdp"
            app:strokeColor="#DEDEDE"
            android:layout_marginBottom="@dimen/_10sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/MaterialCardThree"
            android:id="@+id/MaterialCardFour"
            app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginTop="@dimen/_10sdp"
            app:layout_constraintTop_toBottomOf="@+id/MaterialCardTwo"
            android:layout_height="wrap_content">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/ic_map_4"
                    android:layout_width="@dimen/_40sdp"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_margin="@dimen/_10sdp"
                    android:src="@drawable/ic_map_1"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/textViewMapFour"
                    android:layout_width="wrap_content"
                    android:minWidth="@dimen/_70sdp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_10sdp"
                    android:fontFamily="@font/inter_semi_bold"
                    android:text="@string/HybridMap"
                    android:textColor="@color/permissionSubTextColor"
                    android:textSize="@dimen/_12ssp"
                    app:layout_constraintBottom_toBottomOf="@+id/ic_map_4"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/ic_map_4"
                    app:layout_constraintTop_toTopOf="@+id/ic_map_4" />
            </androidx.constraintlayout.widget.ConstraintLayout>




        </com.google.android.material.card.MaterialCardView>









    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>